Generated new Team-Red-Report