@@ -1,6 +1,6 @@
 # 🔴 Team Red Codebase & Architecture Review
 
-*Prüfdatum: 17. September 2026*  
+*Prüfdatum: 18. September 2026*  
 *Projekt: Foomp (Funktionales Framework für Java)*  
 *Status: Unvoreingenommene, konstruktive Gesamtprüfung des Projekts zur Qualitätssicherung und Weiterentwicklung.*
 
@@ -10,30 +10,33 @@
 
 **Foomp** ist ein bemerkenswert durchdachtes, mathematisch fundiertes FP-Framework für Java. Die Typensicherheit, die Higher-Kinded-Types-Simulation (`Higher1` bis `Higher4`), die sauberen Algebra-Hierarchien (`Functor`, `Applicative`, `Monad`, `Foldable`) und die Ausarbeitung von Monaden (`Eval`, `Stateful`, `Continuation`, `Trampoline`, `Attempt`, `Result`, `Maybe`, `Either`) suchen im Java-Ökosystem ihresgleichen.
 
-* **Architektur:** 9/10 – Enorm hohes funktionales Niveau, durchgängiges `null`-Handling, saubere Annotationen (`@NonNull`, `@LazyOperation`, `@UnwindingOperation`).
-* **Testabdeckung:** 9.5/10 – Vorbildliche Test-Suiten mit `TestHelper`, strukturierte `@Nested`-Klassen.
-* **Code-Hygiene:** 8.5/10 – Sehr saubere Formatierung, bis auf vereinzelte Artefakte und `TODO`s im `misc`-Package.
+* **Dokumentation:** 9.5/10 – Vollständige, zweigeteilte Dokumentation (API-Referenzen & praxisnahe Entwickler-Guides) für alle Klassen in `Base` und `Higher` in Astro/Starlight integriert. Veraltete Artefakte und tote Links wurden bereinigt.
+* **Architektur:** 9.0/10 – Enorm hohes funktionales Niveau, durchgängiges `null`-Handling, saubere Annotationen (`@NonNull`, `@LazyOperation`, `@UnwindingOperation`).
+* **Testabdeckung:** 9.5/10 – Vorbildliche Test-Suiten mit `TestHelper`, strukturierte `@Nested`-Klassen; alle Gradle-Tests laufen vollständig grün durch.
+* **Code-Hygiene:** 9.0/10 – Hohe Codequalität, `RecyclingBin` und tote Dokumente entfernt; wenige verbleibende `TODO`s im `misc`-Package und in `Util`/`Box`.
 
 ---
 
 ## 2. Detaillierte Befunde & Handlungsfelder
 
 ### 🚨 A. Performance-Klippen bei Rekursion & Folds (`StackOverflowError`)
-* **Problem:** In persistenten Datenstrukturen wie `AVLTree`, `RedBlackTree` oder tief geschachtelten Folds werden viele Operationen rein rekursiv ausgeführt.
-* **Risiko:** Java beherrscht bis heute keine Tail-Call-Optimization (TCO). Während `Trampoline` im Projekt existiert, nutzen die Standard-Datenstrukturen es intern nicht konsequent. Bei großen Datenmengen ($N > 10.000$ in unbalancierten Ketten) droht ein `StackOverflowError`.
+* **Problem:** In persistenten Datenstrukturen wie `AVLTree`, `RedBlackTree` oder tief geschachtelten Folds werden Operationen rein rekursiv ausgeführt.
+* **Risiko:** Java beherrscht keine Tail-Call-Optimization (TCO). Während `Trampoline` im Projekt existiert, nutzen die Standard-Datenstrukturen es intern nicht konsequent. Bei großen Datenmengen ($N > 10.000$ in unbalancierten Ketten) droht ein `StackOverflowError`.
 * **Handlungsempfehlung:** Sicherstellen, dass alle tiefen Traversierungen entweder iterativ (Schleife/Stack) oder über das hauseigene `Trampoline` abgesichert sind.
 
 ---
 
-### 🚨 B. Altlasten & tote Artefakte im Repository
-* **Problem:** Im Ordner `Base/src/main/RecyclingBin/Sequence.java` liegt eine veraltete Version von `Sequence.java` voll mit `// TODO: return null;`.
-* **Risiko:** Solche „Papierkörbe“ im Source-Tree blähen das Projekt auf, verwirren Code-Scanner, IDEs und externe Entwickler und mindern den professionellen Eindruck.
-* **Handlungsempfehlung:** `RecyclingBin`-Verzeichnis restlos löschen (Historie ist in Git gesichert).
+### ✅ B. Altlasten & tote Artefakte im Repository (Erledigt)
+* **Status:** Erfolgreich bereinigt.
+* **Maßnahmen:** 
+  * Das `RecyclingBin`-Verzeichnis wurde vollständig entfernt.
+  * Veraltete `*-overview.md`- und Beispiel-Dateien in der Starlight-Dokumentation wurden bereinigt.
+  * Sämtliche internen Querverweise und Landingpage-Links wurden auf die neuen modularen Dokumentationsrouten umgestellt.
 
 ---
 
-### 🚨 C. Unvollständige / ungeschützte Hilfsklassen (`misc`-Package)
-Ein Blick in `org.quurz.foomp.base.misc` zeigt einige offene Baustellen:
+### 🚨 C. Unvollständige / ungeschützte Hilfsklassen (`misc`-Package & Utils)
+Ein Blick in `org.quurz.foomp.base.misc` und `util` zeigt verbleibende Optimierungspotenziale:
 1. **`SemVer.java`**:
    * Kommentar: `// TODO: Immutable machen & Messages`.
    * Klassen wie `SemVer` sollten im FP-Kontext strikt unveränderlich (`final`, keine mutierenden Setter) sein.
@@ -42,37 +45,43 @@ Ein Blick in `org.quurz.foomp.base.misc` zeigt einige offene Baustellen:
 3. **`LogAdapter.java`**:
    * Enthält `// TODO: Log-Methoden mit Exception-Argument hinzufügen`.
 4. **`Util.java`**:
-   * Kommentar: `// TODO: Namen der Methoden überarbeiten. Gibt Probleme bei statischem Import.` (z. B. Namenskollisionen bei statischen Helpern).
+   * Kommentar: `// TODO: Namen der Methoden überarbeiten. Gibt Probleme bei statischem Import.` (Namenskollisionen bei statischen Helpern).
+5. **`Box.java`**:
+   * Kommentar: `// TODO: Sollte Provider implementieren`.
 
 ---
 
 ### 🚨 D. HKT-Typsicherheit & dynamische Casts (`narrow`)
 * **Problem:** Das Higher-Kinded-Types-Pattern in Java basiert konzeptionsbedingt auf Subtyping und dynamischem Downcasting (`narrow(...)`).
 * **Risiko:** Wenn ein Aufrufer fälschlicherweise eine Fremdimplementierung von `Higher1<Seq.µ, A>` übergibt, knallt es erst zur Laufzeit (`ClassCastException` bzw. `IllegalArgumentException`), nicht zur Compile-Zeit.
-* **Handlungsempfehlung:** Die `narrow`-Methoden überall einheitlich mit aussagekräftigen Fehlermeldungen versehen (wie bei `Seq` und `Sequence` umgesetzt, sollte dies auch für `Tuple`, `Record`, `Attempt` etc. auf gleichem Niveau gehalten werden).
+* **Handlungsempfehlung:** Die `narrow`-Methoden überall einheitlich mit aussagekräftigen Fehlermeldungen versehen (wie bei `Seq`, `Sequence`, `Tuple`, `Record`, `Attempt` etc.).
 
 ---
 
-### 🚨 E. API-Inkonsistenzen zwischen Datenstrukturen
-* **Übersicht der Datenstrukturen:**
-  * `Sequence`: Lazy-spooled & segmentiert (ideal für funktionale Ketten und Laziness).
-  * `SeqList`: Eager & array-basiert (ideal für $O(1)$ Random Access & `java.util.List`-Interop).
-  * `Dictionary`: Lazy via `RedBlackTree`.
-* **Handlungsempfehlung:** Eine klare Matrix in der Dokumentation pflegen, die dem Entwickler sofort zeigt: *Wann nutze ich `Sequence` und wann `SeqList`?*
+### ✅ E. Dokumentations- & Beispiel-Abdeckung (Erledigt)
+* **Status:** Vollständig umgesetzt.
+* **Ergebnis:**
+  * Für alle 21 Utility-Klassen in `Base/util` (`Attempt`, `AVLTree`, `Box`, `Bucket`, `Constraint`, `Continuation`, `DecisionTree`, `Dictionary`, `Either`, `Eval`, `Executable`, `Maybe`, `Nothing`, `Pair`, `Record2`–`4`, `RedBlackTree`, `Result`, `SeqList`, `Sequence`, `Stateful`, `Task`, `Trampoline`, `Tuple2`–`4`, `Util`, `Zipper`) sowie alle `Higher`-Typen (`Higher1`–`Higher4`, `Hkt`, `WitnessType`) existieren nun vollständige, englischsprachige API-Referenzen und Entwickler-Guides mit lauffähigen Code-Beispielen.
+  * Klare Abgrenzungen (z. B. `Sequence` vs. `SeqList`, `Tuple` vs. `Record` vs. `Pair`) sind in den Guides dokumentiert.
 
 ---
 
-### 🚨 F. Dokumentations- & Beispiel-Abdeckung
-* Die Kernmodule (`Seq`, `Sequence`, `SeqList`, `Tuple`, `Maybe`, `Either`) sind exzellent dokumentiert.
-* **Handlungsempfehlung:** Komplexere Spezial-Monaden wie **`Continuation`**, **`Stateful`**, **`Trampoline`** und **`DecisionTree`** benötigen praxisnahe End-to-End-Anwendungsbeispiele in den Starlight-Guides, um für Einsteiger greifbar zu werden.
+### 🚨 F. Build- & Tooling-Hinweise
+1. **Astro Sitemap Warnung:**
+   * `@astrojs/sitemap` überspringt die Sitemap-Generierung, da die Option `site` in `docs/astro.config.mjs` fehlt (z. B. `site: 'https://foomp.quurz.org'`).
+2. **Gradle / JDK 25 Warnungen:**
+   * ByteBuddy Agent Dynamic Loading Warning unter JDK 25 (`-XX:+EnableDynamicAgentLoading`).
+   * Gradle Deprecation Warnings hinsichtlich Gradle 10 Kompatibilität.
 
 ---
 
 ## 3. Priorisierter Maßnahmenplan (Backlog)
 
 1. [x] **Aufräumen:** Verzeichnis `Base/src/main/RecyclingBin` entfernen.
-2. [ ] **Misc-Härtung:** `SemVer` unveränderlich machen und Lokalisierungsmeldungen anbinden.
-3. [ ] **Misc-Härtung:** `ShutdownHookRegistry` und `LogAdapter` vervollständigen.
-4. [ ] **Sicherheit:** Rekursive Operationen in Bäumen/Folds gegen `StackOverflowError` absichern.
-5. [ ] **HKT-Check:** `narrow`-Methoden in allen `HigherN`-Implementierern vereinheitlichen.
-6. [ ] **Dokumentation:** Praxis-Guides für `Continuation`, `Stateful` und `Trampoline` ergänzen.
+2. [x] **Dokumentation:** Vollständige Dokumentation & Guides für alle `Base`- und `Higher`-Klassen in Astro/Starlight erstellen.
+3. [x] **Dokumentations-Hygiene:** Veraltete `*-overview.md`-Dateien entfernen und alle internen Verlinkungen aktualisieren.
+4. [ ] **Misc-Härtung:** `SemVer` unveränderlich machen und Lokalisierungsmeldungen anbinden.
+5. [ ] **Misc-Härtung:** `ShutdownHookRegistry` und `LogAdapter` vervollständigen.
+6. [ ] **Sicherheit & Skalierbarkeit:** Rekursive Operationen in Bäumen/Folds gegen `StackOverflowError` absichern.
+7. [ ] **HKT-Check:** `narrow`-Methoden in allen `HigherN`-Implementierern vereinheitlichen.
+8. [ ] **Tooling:** `site`-URL in `docs/astro.config.mjs` für fehlerfreie Sitemap-Generierung konfigurieren.
